--- a/linden/indra/newview/CMakeLists.txt
+++ b/linden/indra/newview/CMakeLists.txt
@@ -233,6 +233,7 @@ set(viewer_SOURCE_FILES
     llhudview.cpp
     llimpanel.cpp
     llimview.cpp
+    llinterface.cpp
     llinventoryactions.cpp
     llinventorybridge.cpp
     llinventoryclipboard.cpp
@@ -650,6 +651,7 @@ set(viewer_HEADER_FILES
     llhudview.h
     llimpanel.h
     llimview.h
+    llinterface.h
     llinventorybridge.h
     llinventoryclipboard.h
     llinventorymodel.h
