port SG2.0 Mediaplugs (webkit supports flash now)

--- a/linden/indra/media_plugins/example/CMakeLists.txt
+++ b/linden/indra/media_plugins/example/CMakeLists.txt
@@ -14,7 +14,7 @@ include(PluginAPI)
 include(MediaPluginBase)
 include(FindOpenGL)
 
-include(ExamplePlugin)
+#awfixme include(ExamplePlugin)
 
 include_directories(
     ${LLPLUGIN_INCLUDE_DIRS}
