Robin Cornelius: fixes for building plugins on Linux 64bit

--- a/linden/indra/llcommon/CMakeLists.txt
+++ b/linden/indra/llcommon/CMakeLists.txt
@@ -198,3 +198,23 @@ target_link_libraries(
     ${EXPAT_LIBRARIES}
     ${ZLIB_LIBRARIES}
     )
+
+if(HAVE_64_BIT)
+	add_library (llcommonPIC ${llcommon_SOURCE_FILES})
+	add_dependencies(llcommonPIC prepare)
+
+	if(WINDOWS)
+		add_definitions(/FIXED:NO)
+	else(WINDOWS) # not windows therefore gcc LINUX and DARWIN
+		add_definitions(-fPIC)
+	endif(WINDOWS)
+	
+	target_link_libraries(
+		llcommonPIC
+		${APRUTIL_LIBRARIES}
+		${APR_LIBRARIES}
+		${EXPAT_LIBRARIES}
+		${ZLIB_LIBRARIES}
+		)
+endif(HAVE_64_BIT)
+
