--- a/.gitignore
+++ b/.gitignore
@@ -10,16 +10,13 @@
 # ARTWORK
 
 linden/LICENSE-logos.txt
-<<<<<<< HEAD
 linden/indra/newview/skins/default/textures/*.tga
 linden/indra/newview/skins/default/textures/*.j2c
 linden/indra/newview/skins/silver/textures/*.tga
 linden/indra/newview/skins/silver/textures/*.j2c
-=======
 linden/indra/newview/skins/*/textures/
 linden/indra/newview/skins/dark/
 linden/indra/newview/skins/gemini
->>>>>>> remotes/jjacek/weekly
 linden/indra/newview/skins/default/html/btn_purplepill_bg.png
 linden/indra/newview/skins/default/html/en-us/loading/sl_logo_rotate_black.gif
 linden/indra/newview/skins/default/html/en-us/loading/Thumbs.db
@@ -34,6 +31,7 @@ linden/indra/newview/cursors_mac/
 linden/indra/newview/viewer.icns
 linden/indra/newview/installers/windows/README.txt
 linden/indra/newview/installers/windows/*
+linden/indra/newview/res/imp_icon.ico #no.
 
 # LIBRARIES
 
